# rosidl_typesupport_protobuf

./: .gitignore  README.md
.github/workflows/: basic_ci.yaml
images/: flow chart type support generation.pptx
proto-test/: CMakeLists.txt  package.xml
proto-test/include/proto_test/: typeadapt_message_fixtures.hpp
proto-test/test/: subscribe_array_types.cpp  subscribe_array_types.hpp  subscribe_basic_types.cpp  subscribe_basic_types.hpp  subscribe_helper.hpp  subscribe_string_types.cpp  subscribe_string_types.hpp  test_proto_typeadapt.cpp
rosidl_adapter_proto/: CMakeLists.txt  package.xml
rosidl_adapter_proto/cmake/: rosidl_adapt_proto_interfaces.cmake  rosidl_adapter_proto-extras.cmake.in
rosidl_adapter_proto/resource/: action.proto.em  idl.proto.em  msg.proto.em  rosidl_adapter_proto__visibility_control.h.in  srv.proto.em
rosidl_adapter_proto/rosidl_adapter_proto/: __init__.py
rosidl_adapter_proto/test/: test_adapter_proto_message.py
rosidl_adapter_proto/test/msg/: BoolTest.idl
rosidl_typeadapter_protobuf_test/: CMakeLists.txt  package.xml
rosidl_typeadapter_protobuf_test/include/rosidl_typeadapter_protobuf_test/: typeadapt_message_fixtures.hpp
rosidl_typeadapter_protobuf_test/test/: subscribe_array_types.cpp  subscribe_array_types.hpp  subscribe_basic_types.cpp  subscribe_basic_types.hpp  subscribe_helper.hpp  subscribe_string_types.cpp  subscribe_string_types.hpp  test_proto_typeadapt.cpp
rosidl_typesupport_protobuf/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosidl_typesupport_protobuf/cmake/: discover-ros-distro-extras.cmake
rosidl_typesupport_protobuf/include/rosidl_typesupport_protobuf/: message_type_support.hpp  message_type_support_decl.hpp  proto_descriptor_helper.hpp  rosidl_generator_c_pkg_adapter.hpp  service_type_support.hpp  service_type_support_decl.hpp  visibility_control.h
rosidl_typesupport_protobuf/rosidl_typesupport_protobuf/: __init__.py
rosidl_typesupport_protobuf_c/: CMakeLists.txt  package.xml
rosidl_typesupport_protobuf_c/cmake/: rosidl_typesupport_protobuf_c-extras.cmake.in  rosidl_typesupport_protobuf_c_generate_interfaces.cmake  rosidl_typesupport_protobuf_c_write_arguments.cmake
rosidl_typesupport_protobuf_c/include/rosidl_typesupport_protobuf_c/: identifier.hpp  to_ros_c_string.hpp  wstring_conversion.hpp
rosidl_typesupport_protobuf_c/resource/: idl__rosidl_typesupport_protobuf_c.hpp.em  idl__type_support.cpp.em  msg__rosidl_typesupport_protobuf_c.hpp.em  msg__type_support.cpp.em  rosidl_typesupport_protobuf_c__visibility_control.h.in  srv__rosidl_typesupport_protobuf_c.hpp.em  srv__type_support.cpp.em  tmpl_forward_declarations.em  tmpl_include_directories.em
rosidl_typesupport_protobuf_c/rosidl_typesupport_protobuf_c/: __init__.py
rosidl_typesupport_protobuf_c/src/: identifier.cpp  to_ros_c_string.cpp  wstring_conversion.cpp
rosidl_typesupport_protobuf_c/test/: test_wstring_conversion.cpp
rosidl_typesupport_protobuf_cpp/: CMakeLists.txt  package.xml
rosidl_typesupport_protobuf_cpp/cmake/: rosidl_typesupport_protobuf_cpp-extras.cmake.in  rosidl_typesupport_protobuf_cpp_generate_interfaces.cmake  rosidl_typesupport_protobuf_cpp_write_arguments_cmake
rosidl_typesupport_protobuf_cpp/include/rosidl_typesupport_protobuf_cpp/: identifier.hpp  wstring_conversion.hpp
rosidl_typesupport_protobuf_cpp/resource/: idl__rosidl_typesupport_protobuf_cpp.hpp.em  idl__type_support.cpp.em  idl__typeadapter_protobuf_cpp.hpp.em  msg__rosidl_typesupport_protobuf_cpp.hpp.em  msg__type_support.cpp.em  rosidl_typesupport_protobuf_cpp__visibility_control.h.in  srv__rosidl_typesupport_protobuf_cpp.hpp.em  srv__type_support.cpp.em  tmpl_forward_declarations.em  tmpl_include_directories.em
rosidl_typesupport_protobuf_cpp/rosidl_typesupport_protobuf_cpp/: __init__.py
rosidl_typesupport_protobuf_cpp/src/: identifier.cpp  wstring_conversion.cpp
rosidl_typesupport_protobuf_cpp/test/: test_wstring_conversion.cpp
