<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_adapter_proto</name>
  <version>0.0.1</version>
  <description>Generate the Protobuf interfaces for Protobuf serialization.</description>
  <maintainer email="aleksandar.brakmic@continental-corporation.com">Aleksandar Brakmić</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>ament_cmake</build_depend>

  <exec_depend>python3-empy</exec_depend>
  <exec_depend>rosidl_cli</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>
  
  <!-- <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend> -->

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
    <message_generator>proto</message_generator>
  </export>
</package>