<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_typeadapter_protobuf_test</name>
  <version>0.19.1</version>
  <description>Protobuff type adapter test</description>

  <maintainer email="gonzalodepedro@ekumenlabs.com">Gonzalo de Pedro</maintainer>

  <license>Apache License 2.0</license>

  <author email="gonzalodepedro@ekumenlabs.com">Gonzalo de Pedro</author>

  <build_depend>rosidl_default_generators</build_depend>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>


  <test_depend>ament_cmake</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>osrf_testing_tools_cpp</test_depend>
  <test_depend>rcl</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>rclcpp_action</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>rcpputils</test_depend>
  <test_depend>rmw_implementation</test_depend>
  <test_depend>rmw_implementation_cmake</test_depend>
  <test_depend>ros2cli</test_depend>
  <test_depend>test_msgs</test_depend>
  <test_depend>rosidl_typesupport_protobuf_cpp</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>