<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_typesupport_protobuf</name>
  <version>0.0.1</version>
  <description>Shared code for rosidl_typesupport_protobuf_cpp and rosidl_typesupport_protobuf_c.</description>
  <maintainer email="aleksandar.brakmic@continental-corporation.com">Aleksandar Brakmić</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_generator_c</buildtool_depend>
  <buildtool_export_depend>rosidl_generator_c</buildtool_export_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>